--- a/wercker.yml
+++ b/wercker.yml
@@ -37,6 +37,8 @@ build:
         code: |-
           # The COVERALLS_TOKEN is set in the project at
           # wercker as project environment variable.
+          go get github.com/axw/gocov/gocov
+          go get github.com/matm/gocov-html
           go get github.com/mattn/goveralls
           goveralls -service wercker.com -repotoken $COVERALLS_TOKEN
           #goveralls -package="./..." -service='wercker.com'
