--- a/wercker.yml
+++ b/wercker.yml
@@ -15,10 +15,6 @@ build:
         name: go get
         code: |
           go get
-    # - script:
-    #     name: go build
-    #     code: |
-    #       go build ./...
     - script:
         name: go test
         code: |
@@ -38,7 +34,5 @@ build:
           # The COVERALLS_TOKEN is set in the project at
           # wercker as project environment variable.
           go get github.com/axw/gocov/gocov
-          go get github.com/matm/gocov-html
           go get github.com/mattn/goveralls
-          goveralls -service wercker.com -repotoken $COVERALLS_TOKEN
-          #goveralls -package="./..." -service='wercker.com'
+          goveralls -service=wercker.com -repotoken $COVERALLS_TOKEN
