--- a/wercker.yml
+++ b/wercker.yml
@@ -14,23 +14,20 @@ build:
     - script:
         name: go get
         code: |
-          go get
+          cd $WERCKER_SOURCE_DIR
+          go version
+          go get -t ./...
+    - script:
+        name: go build
+        code: |
+          go build ./...
     - script:
         name: go test
         code: |
-          go test
-    # - script:
-    #     name: Coverage
-    #     code: |-
-    #       go get github.com/axw/gocov/gocov
-    #       gocov report coverage.json
-    #       gocov test > coverage.json
-    #       go get github.com/matm/gocov-html
-    #       gocov report coverage.json
-    #       gocov-html coverage.json > $WERCKER_REPORT_ARTIFACTS_DIR/coverage.html
+          go test -cover ./...
     - script:
         name: Coveralls.io
-        code: |-
+        code: |
           # The COVERALLS_TOKEN is set in the project at
           # wercker as project environment variable.
           go get github.com/axw/gocov/gocov
