Typo in repo name

--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,17 @@
 box: wercker/golang
 build:
   steps:
+    #- add-ssh-key:
+    #    keyname: GITHUB_TOKEN
     - setup-go-workspace
+
+    # Get dependencies
+    - script:
+        name: go get
+        code: |
+          cd $WERCKER_SOURCE_DIR
+          go get -t ./...
+
     - script:
         name: install gcc-4.8
         code: |
@@ -22,12 +32,6 @@ build:
           cd libsass
           make
 
-    # Get dependencies
-    - script:
-        name: go get
-        code: |
-          cd $WERCKER_SOURCE_DIR
-          go get -t ./...
 
     # Build the project
     - script:
