--- a/wercker.yml
+++ b/wercker.yml
@@ -38,23 +38,18 @@ build:
           GIT_BRANCH=$WERCKER_GIT_BRANCH goveralls -coverprofile=coverage.out -service=wercker.com -repotoken $COVERALLS_TOKEN
 deploy:
   steps:
+    - script:
+        name: get version
+        code: |
+          export APP_VERSION=$(go run sprite/main.go --version)
+          export SPRITE=$($GOPATH/bin/sprite)
+          echo $SPRITE
+    - wercker/github-create-release@1.0.1:
+        token: $GITHUB_TOKEN
+        tag: $APP_VERSION
+        title: Sprite sass tool $APP_VERSION
+        draft: true
     - github-upload-asset:
         token: $GITHUB_TOKEN
-        file: $($GOPATH/bin/sprite)
-        release_id: 1
-  # steps:
-  #   - script:
-  #       name: get version
-  #       code: |
-  #         export APP_VERSION=$(go run sprite/main.go --version)
-  #         export SPRITE=$($GOPATH/bin/sprite)
-  #         echo $SPRITE
-  #   - wercker/github-create-release@1.0.1:
-  #       token: $GITHUB_TOKEN
-  #       tag: $APP_VERSION
-  #       title: Sprite sass tool $APP_VERSION
-  #       draft: true
-  #   - github-upload-asset:
-  #       token: $GITHUB_TOKEN
-  #       file: $SPRITE
-  #       filename: sprite
+        file: $SPRITE
+        filename: sprite
