generate binary output

--- a/wercker.yml
+++ b/wercker.yml
@@ -41,9 +41,12 @@ deploy:
     - script:
         name: get version
         code: |
+          # create binary
+          go install github.com/drewwells/sprite_sass/sprite
           export RELEASE_TAG=$(cat .release_tag)
           export SPRITE=$($GOPATH/bin/sprite)
           echo $RELEASE_TAG
+          find $GOPATH
     - wercker/github-create-release:
         token: $GITHUB_TOKEN
         tag: $APP_VERSION
