--- a/wercker.yml
+++ b/wercker.yml
@@ -7,9 +7,7 @@ build:
     - script:
         name: build libsass
         code: |
-          git submodule update --init --recursive
-          cd libsass
-          make
+          make deps
 
     # Get dependencies
     - script:
