Whats up wercker no like [[

--- a/wercker.yml
+++ b/wercker.yml
@@ -7,7 +7,9 @@ build:
     - script:
         name: Populate cache
         code: |
-          if test -d "$WERCKER_CACHE_DIR/sprite_path"; then rsync -avz "$WERCKER_CACHE_DIR/sprite_path" "$GOPATH"; fi
+          if test -d "$WERCKER_CACHE_DIR/sprite_path"; then rsync -avz "$WERCKER_CACHE_DIR/sprite_path/" "$GOPATH"; fi
+          export LIB_VER=$(cat libsass/.lib_version)
+          if test -d "$WERCKER_CACHE_DIR/libsass_$LIB_VER"; then rsync -avz "$WERCKER_CACHE_DIR/libsass_$LIB_VER/" "libsass/"; fi
     - script:
         name: build libsass
         code: |
@@ -45,7 +47,8 @@ build:
     - script:
         name: Store cache
         code: |
-          rsync -avz --exclude "$WERCKER_SOURCE_DIR" "$GOPATH/" "$WERCKER_CACHE_DIR/sprite_path"
+          rsync -avz --exclude "sprite_sass/" --exclude ".git/" "$GOPATH/" "$WERCKER_CACHE_DIR/sprite_path"
+          rsync -avz "$WERCKER_SOURCE_DIR/libsass/" "$WERCKER_CACHE_DIR/libsass_$LIB_VER/"
 deploy:
   steps:
     - script:
