coverage report all branches

--- a/wercker.yml
+++ b/wercker.yml
@@ -39,7 +39,7 @@ build:
           # wercker as project environment variable.
           go get github.com/axw/gocov/gocov
           go get github.com/mattn/goveralls
-          go test -v -covermode=count -coverprofile=coverage.out
+          go test -v -covermode=count -coverprofile=coverage.out ./...
           GIT_BRANCH=$WERCKER_GIT_BRANCH goveralls -coverprofile=coverage.out -service=wercker.com -repotoken $COVERALLS_TOKEN
     - script:
         name: Package deployment
