hipchat integration for wercker

--- a/wercker.yml
+++ b/wercker.yml
@@ -50,6 +50,11 @@ build:
         code: |
           rsync -avz --exclude ".hg/" --exclude "sprite_sass/" --exclude ".git/" "$GOPATH/" "$WERCKER_CACHE_DIR/sprite_path"
           rsync -avz "$WERCKER_SOURCE_DIR/libsass/" "$WERCKER_CACHE_DIR/libsass_$LIB_VER/"
+  after-steps:
+    - hipchat-notify:
+        token: $HIPCHAT_TOKEN
+        room-id: 550303
+        from-name: Wellington build
 deploy:
   steps:
     - script:
