--- a/wercker.yml
+++ b/wercker.yml
@@ -39,7 +39,8 @@ build:
           # wercker as project environment variable.
           go get github.com/axw/gocov/gocov
           go get github.com/mattn/goveralls
-          #go test -v -covermode=count -coverprofile=profile.cov -service=travis-ci
+          go get golang.org/x/tools/cmd/goimports
+          go get github.com/golang/lint/golint
           scripts/goclean.sh
           Git_BRANCH=$WERCKER_GIT_BRANCH goveralls -coverprofile=profile.cov -service=wercker.com -repotoken $COVERALLS_TOKEN
     - script:
