--- a/circle.yml
+++ b/circle.yml
@@ -6,4 +6,6 @@ machine:
     - mkdir libsass
     - cd libsass && curl -k -L "https://github.com/sass/libsass/archive/$LIBSASS_VERSION.tar.gz" -o libsass.tar.gz
     - pwd
-    - cd libsass && tar -xvf libsass.tar.gz --strip 1 && autoreconf -fvi && ./configure --disable-shared --prefix=$HOME --disable-silent-rules --disable-dependency-tracking && make install
+    - cd libsass && tar -xvf libsass.tar.gz --strip 1 && autoreconf -fvi
+    - cd libsass && ./configure --disable-shared --prefix=$HOME --disable-silent-rules --disable-dependency-tracking
+    - cd libsass && make install
