--- a/wercker.yml
+++ b/wercker.yml
@@ -17,6 +17,7 @@ build:
     - script:
         name: go get
         code: |
+          export PKG_CONFIG_PATH=$WERCKER_SOURCE_DIR/libsass/support
           echo $PKG_CONFIG_PATH
           find $PKG_CONFIG_PATH
           cd $WERCKER_SOURCE_DIR
