--- a/circle.yml
+++ b/circle.yml
@@ -13,11 +13,14 @@ machine:
     - rm -rf $HOME/.go_workspace/src/github.com/wellington/wellington
     - mkdir -p $HOME/.go_workspace/src/github.com/wellington
     - ln -s $HOME/$CIRCLE_PROJECT_REPONAME $HOME/.go_workspace/src/github.com/wellington/wellington
-test:
-  override:
+dependencies:
+  pre:
     - go get -u github.com/wellington/spritewell
     - go get github.com/axw/gocov/gocov
     - go get github.com/mattn/goveralls
     - go get golang.org/x/tools/cmd/goimports
     - go get github.com/golang/lint/golint
-    - scripts/goclean.sh
+test:
+  override:
+    - go test -race ./...
+    - go vet ./...
