--- a/wercker.yml
+++ b/wercker.yml
@@ -18,6 +18,8 @@ build:
         name: go get
         code: |
           export PKG_CONFIG_PATH=$WERCKER_SOURCE_DIR/libsass/support
+          go get -u -d github.com/wellington/spritewell
+          cd $WERCKER_SOURCE_DIR
           go get -v -t ./...
     - script:
         name: go test
@@ -37,7 +39,7 @@ build:
     - script:
         name: Store cache
         code: |
-          rsync -avz --exclude "wellington/" "$GOPATH/" "$WERCKER_CACHE_DIR/sprite_path"
+          rsync -avz --exclude "pkg/" --exclude "wellington/" "$GOPATH/" "$WERCKER_CACHE_DIR/sprite_path"
           rsync -avz "$WERCKER_SOURCE_DIR/libsass/" "$WERCKER_CACHE_DIR/libsass_$LIBSASS_VERSION/"
     # Build the project
     - script:
