--- a/circle.yml
+++ b/circle.yml
@@ -2,25 +2,37 @@ machine:
   environment:
     PKG_CONFIG_PATH: "$HOME/lib/pkgconfig/"
     LIBSASS_VERSION: $(cat $HOME/$CIRCLE_PROJECT_REPONAME/.libsass_version)
-  pre:
+    PROJECT_ROOT: $HOME/.go_workspace/src/github.com/wellington/wellington
+  post:
     - cat $HOME/$CIRCLE_PROJECT_REPONAME/.libsass_version
     - echo "export LIBSASS_VERSION=$(cat $HOME/$CIRCLE_PROJECT_REPONAME/.libsass_version)" >> ~/.circlerc
     - mkdir libsass
-    - cd libsass && curl -k -L https://github.com/sass/libsass/archive/$LIBSASS_VERSION.tar.gz -o libsass.tar.gz
-    - cd libsass && tar -xvf libsass.tar.gz --strip 1 && autoreconf -fvi
-    - cd libsass && ./configure --disable-shared --prefix=$HOME --disable-silent-rules --disable-dependency-tracking
-    - cd libsass && make install
+    - curl -k -L https://github.com/sass/libsass/archive/$LIBSASS_VERSION.tar.gz -o libsass.tar.gz:
+        pwd: libsass
+    - tar -xvf libsass.tar.gz --strip 1 && autoreconf -fvi:
+        pwd: libsass
+    - ./configure --disable-shared --prefix=$HOME --disable-silent-rules --disable-dependency-tracking:
+        pwd: libsass
+    - make install:
+        pwd: libsass
     - rm -rf $HOME/.go_workspace/src/github.com/wellington/wellington
     - mkdir -p $HOME/.go_workspace/src/github.com/wellington
-    - ln -s $HOME/$CIRCLE_PROJECT_REPONAME $HOME/.go_workspace/src/github.com/wellington/wellington
+    - mv $HOME/$CIRCLE_PROJECT_REPONAME $PROJECT_ROOT
+    - ln -s $PROJECT_ROOT $HOME/$CIRCLE_PROJECT_REPONAME
 dependencies:
   pre:
-    - go get -u github.com/wellington/spritewell
+    - go get -u -d github.com/wellington/spritewell
     - go get github.com/axw/gocov/gocov
     - go get github.com/mattn/goveralls
     - go get golang.org/x/tools/cmd/goimports
     - go get github.com/golang/lint/golint
+  override:
+    - echo $PROJECT_ROOT/hello
+    - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt:
+        pwd: $HOME/wellington/wt
 test:
   override:
-    - go test -race ./...
-    - go vet ./...
+    - pwd
+    - bash ./scripts/goclean.sh
+  post:
+    - GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
