--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
     - go get golang.org/x/tools/cmd/goimports
     - go get github.com/golang/lint/golint
     - cat $HOME/$CIRCLE_PROJECT_REPONAME/.libsass_version
-    - echo "export LIBSASS_VERSION=$(cat $HOME/$CIRCLE_PROJECT_REPONAME/.libsass_version)" >> ~/.circlerc
+    #- echo "export LIBSASS_VERSION=$(cat $HOME/$CIRCLE_PROJECT_REPONAME/.libsass_version)" >> ~/.circlerc
     - mkdir libsass
     - curl -k -L https://github.com/sass/libsass/archive/$LIBSASS_VERSION.tar.gz -o libsass.tar.gz:
         pwd: libsass
@@ -31,7 +31,6 @@ dependencies:
         pwd: $HOME/wellington/wt
 test:
   override:
-    - pwd
     - bash ./scripts/goclean.sh
   post:
     - GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
