--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ dependencies:
     - "$HOME/include" # relative to the user's home directory
   pre:
     - go get -f -u -d github.com/wellington/spritewell
+    - go get -f -u -d gopkg.in/fsnotify.v1
     - go get github.com/axw/gocov/gocov
     - go get github.com/mattn/goveralls
     - go get golang.org/x/tools/cmd/goimports
@@ -24,16 +25,16 @@ dependencies:
         pwd: libsass
     - make install:
         pwd: libsass
-    - rm -rf $HOME/.go_workspace/src/github.com/wellington/wellington
-    - mkdir -p $HOME/.go_workspace/src/github.com/wellington
-    - mv $HOME/$CIRCLE_PROJECT_REPONAME $PROJECT_ROOT
-    - ln -s $PROJECT_ROOT $HOME/$CIRCLE_PROJECT_REPONAME
   override:
     - echo $PROJECT_ROOT/hello
-    - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt:
-        pwd: $HOME/wellington/wt
+checkout:
+  post:
+    - mkdir -p ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}
+    - rm -rf ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
+    - cp -R $(pwd) ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
 test:
   override:
-    - bash ./scripts/goclean.sh
-  post:
-    - GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
+    - go list -f "{{range .TestImports}}{{.}} {{end}}" . | xargs -r go get
+    - cd $PROJECT_ROOT && make test
+    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
+    - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
