--- a/circle.yml
+++ b/circle.yml
@@ -27,5 +27,6 @@ test:
   override:
     - go list -f "{{range .TestImports}}{{.}} {{end}}" . | xargs -r go get
     - cd $PROJECT_ROOT && make test
-    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
     - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
+  post:
+    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
