--- a/Dockerfile.scratch
+++ b/Dockerfile.scratch
@@ -1,8 +1,8 @@
 FROM gliderlabs/alpine:latest
 
 WORKDIR /usr/src/app
-COPY lib64 /usr/lib64
-RUN ln -s /usr/lib64/libstdc++.so.6.0.20 /usr/lib64/libstdc++.so.6
+COPY lib64 /usr/lib
+
 COPY wt /usr/bin/wt
 RUN chmod +x /usr/bin/wt
 
