--- a/circle.yml
+++ b/circle.yml
@@ -43,4 +43,4 @@ deployment:
     branch: [master]
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push wellington/wellington
+      - docker push drewwells/wellington
