--- a/circle.yml
+++ b/circle.yml
@@ -27,7 +27,7 @@ test:
     - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
   post:
     - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
-    - make build #attempt building a container
+    #- make build #attempt building a container
 
 notify:
   webhooks:
