--- a/circle.yml
+++ b/circle.yml
@@ -22,12 +22,10 @@ checkout:
     - cp -R $(pwd) ${GOPATH%%:*}/src/github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
 test:
   override:
-    - go list -f "{{range .TestImports}}{{.}} {{end}}" . | xargs -r go get
-    - cd $PROJECT_ROOT && make test
-    - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
-  post:
-    - cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
     - make build #attempt building a container
+  post:
+    - goxc -tasks='xc archive' -bc 'linux' -arch 'amd64' -d $CIRCLE_ARTIFACTS -n wt -wd wt
+    #- cd $PROJECT_ROOT && GIT_BRANCH=$CIRCLE_BRANCH goveralls -coverprofile=profile.cov -service=circleci -repotoken $COVERALLS_TOKEN
 
 notify:
   webhooks:
