--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ dependencies:
   cache_directories:
     - /usr/src
   pre:
+    - docker version #report version
     - go get -f -u -d github.com/wellington/spritewell
     - go get gopkg.in/fsnotify.v1
     - echo $LIBSASS_VERSION
